Fix bug #2: long word overflows.

--- a/app/assets/stylesheets/todo_items.scss
+++ b/app/assets/stylesheets/todo_items.scss
@@ -15,3 +15,8 @@
 .form-control:disabled {
   background-color: transparent;
 }
+
+.todo-text {
+  overflow-wrap: break-word;
+  word-break: break-all;
+}
